--- a/standard-project.web-app/Views/_ViewImports.cshtml
+++ b/standard-project.web-app/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using standard_project.web_app
-@using standard_project.web_app.Models
+﻿@using standardProject.WebApp
+@using standardProject.WebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
